# cli-settings-derive

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: example.rs  example.yml
src/: lib.rs
tests/: expand.rs  usage.rs  usage1.yml  usage2.yml
tests/expand/: 01-example.expanded.rs  01-example.rs
