[package]
name = "cli-settings-derive"
version = "0.1.0"
edition = "2021"
description = "Manage CLI settings with configuration file(s) and command line parsing, using serde and clap"
documentation = "https://docs.rs/cli-settings-derive"
keywords = ["clap", "serde", "derive", "config", "setting"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/mic006/cli-settings-derive"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.4.3", features = ["derive"] }
let_or_return = "0.1.0"
proc-macro2 = "1.0.56"
quote = "1.0.27"
serde = { version = "1.0.159", features = ["derive"] }
serde_with = "2.3.1"
serde_yaml = "0.9.19"
syn = "2.0.16"

[dev-dependencies]
macrotest = "1.0.9"
syn = { version = "2.0.16", features = ["full", "extra-traits"] }
